tests/compile_errors/syntax/001_void_return_type.xr
// 001_void_return_type.xr
// Expected: Compile error - `void` keyword was removed
// Error should mention: E0804, void
fn f(): void {
    return
}
